search bar üstte

--- a/app/src/greet/greet.template.html
+++ b/app/src/greet/greet.template.html
@@ -1,13 +1,8 @@
-<div class="w-full h-full">
-    <div class="absolute w-full h-full top-0 left-0" style="z-index: 1">
-        <div class="absolute w-full h-full top-0 left-0" style="background-color: rgba(12,0,0,0.58); z-index: 2;"></div>
-        <div class="relative w-full h-full"
-            style="background-image : url('konser1920.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover; z-index: 1">
-        </div>
-    </div>
-
-    <div class="absolute top-0 left-0 w-full flex flex-col h-screen justify-between items-center flex-no-wrap pt-4 text-red-400"
-        style="min-height: 500px; z-index: 10; background-color: transparent">
+<!-- -->
+<div class="relative h-auto w-auto">
+    <div class = "absolute w-full h-full" style = "background-color: rgba(12,0,0,0.3)"></div>
+    <div class="w-full flex flex-col h-screen justify-between items-center flex-no-wrap pt-4 text-red-400"
+        style="min-height: 500px; z-index: 10; background-image : url('konser1920.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover; ">
 
         <div class="text-center mt-12">
             <span class="text-4xl font-bold">Her çeşit etkinlik</span>
@@ -24,9 +19,9 @@
                 </div>
                 <div class="text-center mr-6 p-1">
                     <md-button class="md-icon-button">
-                        <i class="material-icons">star</i>
+                        <img ng-src = "icon_tiyatro.svg" />
                     </md-button>
-                    <p class="text-sm">Kaçmaz!</p>
+                    <p class="text-sm">Tiyatro</p>
                 </div>
                 <div class="text-center mr-6 p-1">
                     <md-button class="md-icon-button">
