toolbardan shrink e kaldırdım

--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -1,5 +1,5 @@
 <meta meta charset=utf-8>
-<md-toolbar class="md-hue-2 fixed top-0 h-12" md-scroll-shrink="true">
+<md-toolbar class="md-hue-2 fixed top-0 h-12" >
   <div class="md-toolbar-tools">
 
     <h2 md-truncate>Aktivist</h2>
