--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -1,5 +1,5 @@
 <meta meta charset=utf-8>
-<md-toolbar class="md-hue-2 fixed top-0 h-12" >
+<md-toolbar class="md-hue-2 fixed top-0 h-16" style = "height: 3.5rem">
   <div class="md-toolbar-tools">
 
     <h2 md-truncate>Aktivist</h2>
@@ -47,7 +47,7 @@
 </md-toolbar>
 
 
-<md-toolbar class="md-hue-2 fixed top-0 h-12" ng-if="$ctrl.isSearchOpen">
+<md-toolbar class="md-hue-2 fixed top-0" ng-if="$ctrl.isSearchOpen" style = "height: 3.5rem">
   
   <div class="flex flex-row h-full items-center">
     <div class = "w-2/12">
