--- a/app/src/greet/greet.template.html
+++ b/app/src/greet/greet.template.html
@@ -1,6 +1,6 @@
 <!-- -->
 <div class="relative h-auto w-auto">
-    <div class = "absolute w-full h-full" style = "background-color: rgba(12,0,0,0.3)"></div>
+    <div class="absolute w-full h-full" style="background-color: rgba(12,0,0,0.3)"></div>
     <div class="w-full flex flex-col h-screen justify-between items-center flex-no-wrap pt-4 text-red-400"
         style="min-height: 500px; z-index: 10; background-image : url('konser1920.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover; ">
 
@@ -12,28 +12,28 @@
         <div class="w-full md:w-3/4 p-1">
             <div class="flex flex-row overflow-auto scrolling-touch justify-between">
                 <div class="text-center mr-6 p-1">
-                    <md-button class="md-icon-button">
-                        <i class="material-icons">star</i>
+                    <md-button class="md-fab"
+                        style="height: 6rem; width: 6rem; background-image : url('konser1920.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
                     </md-button>
                     <p class="text-sm">Kaçmaz!</p>
                 </div>
                 <div class="text-center mr-6 p-1">
-                    <md-button class="md-icon-button">
-                        <img ng-src = "icon_tiyatro.svg" />
+                    <md-button class="md-fab"
+                        style="height: 6rem; width: 6rem; background-image : url('fab_tiyatro.png'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
                     </md-button>
                     <p class="text-sm">Tiyatro</p>
                 </div>
                 <div class="text-center mr-6 p-1">
-                    <md-button class="md-icon-button">
-                        <i class="material-icons">star</i>
+                    <md-button class="md-fab"
+                        style="height: 6rem; width: 6rem; background-image : url('fab_cinema.png'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
                     </md-button>
-                    <p class="text-sm">Kaçmaz!</p>
+                    <p class="text-sm">Sinema</p>
                 </div>
                 <div class="text-center mr-6 p-1">
-                    <md-button class="md-icon-button">
-                        <i class="material-icons">star</i>
+                    <md-button class="md-fab"
+                        style="height: 6rem; width: 6rem; background-image : url('fab_muze.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
                     </md-button>
-                    <p class="text-sm">Kaçmaz!</p>
+                    <p class="text-sm">Müzeler</p>
                 </div>
                 <div class="text-center mr-6 p-1">
                     <md-button class="md-icon-button">
