--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -2,9 +2,9 @@
 <md-toolbar class="md-hue-2 fixed top-0 h-16" style = "height: 3.5rem">
   <div class="md-toolbar-tools">
 
-    <h2 md-truncate>Aktivist</h2>
+    <h2>Aktivist</h2>
 
-    <div class="flex-auto h-full px-16 mb-2">
+    <div class="flex-grow h-full mb-2">
       <div>
         <md-input-container md-no-float class="md-block" ng-if="!$ctrl.isSmaller('768px')">
           <input ng-model="user.address" type="text" placeholder="Address" aria-label="Address">
