--- a/app/src/greet/greet.template.html
+++ b/app/src/greet/greet.template.html
@@ -35,35 +35,11 @@
                     </md-button>
                     <p class="text-sm">Müzeler</p>
                 </div>
-                <div class="text-center mr-6 p-1">
-                    <md-button class="md-icon-button">
-                        <i class="material-icons">star</i>
+                <div class="text-center mr-4 p-1">
+                    <md-button class="md-fab"
+                        style="height: 6rem; width: 6rem; background-image : url('fab_mutfak.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
                     </md-button>
-                    <p class="text-sm">Kaçmaz!</p>
-                </div>
-                <div class="text-center mr-6 p-1">
-                    <md-button class="md-icon-button">
-                        <i class="material-icons">star</i>
-                    </md-button>
-                    <p class="text-sm">Kaçmaz!</p>
-                </div>
-                <div class="text-center mr-6 p-1">
-                    <md-button class="md-icon-button">
-                        <i class="material-icons">star</i>
-                    </md-button>
-                    <p class="text-sm">Kaçmaz!</p>
-                </div>
-                <div class="text-center mr-6 p-1">
-                    <md-button class="md-icon-button">
-                        <i class="material-icons">star</i>
-                    </md-button>
-                    <p class="text-sm">Kaçmaz!</p>
-                </div>
-                <div class="text-center mr-6 p-1">
-                    <md-button class="md-icon-button">
-                        <i class="material-icons">star</i>
-                    </md-button>
-                    <p class="text-sm">Kaçmaz!</p>
+                    <p class="text-sm">Mutfak eğitimi</p>
                 </div>
             </div>
         </div>
