girişteki şeylere margin

--- a/app/src/greet/greet.template.html
+++ b/app/src/greet/greet.template.html
@@ -9,7 +9,7 @@
             <br />
             <span class="text-xl">Sadece aramanı bekliyor</span>
         </div>
-        <div class="w-full md:w-3/4 p-1">
+        <div class="w-full md:w-3/4 p-1 mt-12">
             <div class="flex flex-row overflow-auto scrolling-touch justify-between">
                 <div class="text-center mr-4 p-1">
                     <md-button class="md-fab"
