--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -34,9 +34,19 @@
 
     <ul class="inline-flex justify-end" ng-class="{'hidden': $ctrl.isSmaller('768px')}">
       <li class="mr-3">
-        <md-button>
-          GİRİŞ YAP
-        </md-button>
+          <md-menu md-offset="-20 2" md-position-mode="target-right bottom">
+              <!-- Trigger element is a md-button with an icon -->
+              <md-button ng-click="$mdMenu.open($event)">
+                  GİRİŞ YAP
+                </md-button>
+              <md-menu-content>
+                <md-menu-item>
+                  <md-button ng-click="doSomething()">Do Something
+                </md-button>
+              </md-menu-item>
+              </md-menu-content>
+             </md-menu>
+        
       </li>
 
       <li class="mr-3">
