--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -41,7 +41,25 @@
                 </md-button>
               <md-menu-content>
                 <md-menu-item>
-                  <md-button ng-click="doSomething()">Do Something
+                    <div>
+                      <md-input-container>
+                        <label>Kullanıcı adı</label>
+                        <input ng-model="user.title">
+                      </md-input-container>
+                    </div>
+              </md-menu-item>
+              <md-menu-item class = "mt-4">
+                <div>
+                    <md-input-container>
+                        <label>Şifre</label>
+                        <input ng-model="user.title">
+                    </md-input-container>
+                </div>
+                  
+              </md-menu-item>
+              <md-menu-item class = "mt-4">
+                <md-button class = "md-button text-center">
+                  Giriş
                 </md-button>
               </md-menu-item>
               </md-menu-content>
