--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -44,7 +44,7 @@
                     <div>
                       <md-input-container>
                         <label>Kullanıcı adı</label>
-                        <input ng-model="user.title">
+                        <input>
                       </md-input-container>
                     </div>
               </md-menu-item>
@@ -52,7 +52,7 @@
                 <div>
                     <md-input-container>
                         <label>Şifre</label>
-                        <input ng-model="user.title">
+                        <input type="password">
                     </md-input-container>
                 </div>
                   
