sticky filtre not visible in medium< devices

--- a/app/src/main-content/main-content.template.html
+++ b/app/src/main-content/main-content.template.html
@@ -1,7 +1,7 @@
 <div class="block">
     <span class="text-3xl">Kategori 1: </span>
     <div class = "flex flex-row"> 
-            <div class = "bg-gray-800 md:w-3/12">
+            <div class = "bg-gray-800 md:w-3/12" ng-class = "{'hidden': $ctrl.isSmaller('768px')}">
                 <div class="h-auto w-full p-2 sticky" flex-landscape = "40" style = "top: 4rem">
                     <md-card class="md-padding">
                         <md-content >
