--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -1,4 +1,4 @@
-<div layout = "row" layout-sm = "column" layout-wrap>
+<div class = "p-4" layout = "row" layout-sm = "column" style = "margin-top: 3.5rem" layout-wrap>
     <div class="bg-gray-500" flex = "66" flex-sm = "100" flex-xs = "100">
             <md-card>
                     <img ng-src="metallica.jpg" class="md-card-image" alt="Washed Out">
