--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -2,7 +2,7 @@
 <md-toolbar md-scroll-shrink class="md-hue-2 fixed top-0 h-16 z-40" style = "height: 3.5rem">
   <div class="md-toolbar-tools" style = "margin: auto">
 
-    <h2 class = "my-auto">Aktivist</h2>
+    <a href = "#!/"><h2 class = "my-auto">Aktivist</h2></a>
 
     <div class="flex-grow h-full md:px-40">
       <div>
