--- a/app/src/main-content/main-content.template.html
+++ b/app/src/main-content/main-content.template.html
@@ -1,8 +1,8 @@
 <div class="block">
-    <span class="text-3xl">Kategori 1: </span>
+    
     <div class="flex flex-row">
         <div class="bg-gray-800 lg:w-3/12" ng-class="{'hidden': $ctrl.isSmaller('1000px')}">
-            <div class="h-auto w-full p-2 sticky" flex-landscape="40" style="top: 4rem">
+            <div class="h-auto w-full p-2 sticky top-0" flex-landscape="40">
                 <md-card class="md-padding">
                     <md-content>
                         <md-input-container class="md-block">
