new level website

--- a/app/src/greet/greet.template.html
+++ b/app/src/greet/greet.template.html
@@ -1,15 +1,10 @@
 <!-- -->
 <div class="relative h-auto w-auto">
     <div class="absolute w-full h-full" style="background-color: rgba(12,0,0,0.3)"></div>
-    <div class="w-full flex flex-col justify-center h-screen items-center pt-4 text-red-400"
-        style="min-height: 500px; z-index: 10; background-image : url('konser1920.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover; ">
+    <div class="w-full flex flex-col justify-start h-screen items-center pt-4 text-red-400"
+        style="height: 50%; min-height: 500px; z-index: 10; background-image : url('konser1920.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover; ">
 
-        <div class="text-center mb-8">
-            <span class="text-4xl font-bold">Her çeşit etkinlik</span>
-            <br />
-            <span class="text-xl">Sadece aramanı bekliyor</span>
-        </div>
-        <div class="w-full md:w-3/4 p-1 mt-12">
+        <div class="w-full md:w-3/4 p-1">
             <div class="flex flex-row overflow-auto scrolling-touch justify-between">
                 <div class="text-center mr-4 p-1">
                     <md-button class="md-fab"
@@ -43,6 +38,7 @@
                 </div>
             </div>
         </div>
+
 
 
     </div>
