--- a/app/src/filter-segment/filter-segment.template.html
+++ b/app/src/filter-segment/filter-segment.template.html
@@ -1,4 +1,4 @@
-<div class="h-auto w-full p-2" flex-landscape = "40">
+<div class="h-auto w-full p-2">
     <md-card class="md-padding">
         <md-content >
             <md-input-container class="md-block">
