--- a/app/src/container/container.template.html
+++ b/app/src/container/container.template.html
@@ -2,8 +2,42 @@
         <navbar></navbar>
         
         <div layout="row" flex>
-                <div class="w-3/12 bg-gray-300 hidden" ng-class="{'hidden': !$ctrl.sidenav.isSidenav()}">
+                <div class="w-3/12 bg-gray-300 hidden overflow-y-scroll" ng-class="{'hidden': !$ctrl.sidenav.isSidenav()}">
                         <filter-segment></filter-segment>
+                        <div class="w-full p-1">
+                                <div class="flex flex-row flex-wrap scrolling-touch justify-between">
+                                    <div class="text-center mr-4 p-1">
+                                        <md-button class="md-fab"
+                                            style="height: 6rem; width: 6rem; background-image : url('konser1920.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                                        </md-button>
+                                        <p class="text-sm">Kaçmaz!</p>
+                                    </div>
+                                    <div class="text-center mr-4 p-1">
+                                        <md-button class="md-fab"
+                                            style="height: 6rem; width: 6rem; background-image : url('fab_tiyatro.png'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                                        </md-button>
+                                        <p class="text-sm">Tiyatro</p>
+                                    </div>
+                                    <div class="text-center mr-4 p-1">
+                                        <md-button class="md-fab"
+                                            style="height: 6rem; width: 6rem; background-image : url('fab_cinema.png'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                                        </md-button>
+                                        <p class="text-sm">Sinema</p>
+                                    </div>
+                                    <div class="text-center mr-4 p-1">
+                                        <md-button class="md-fab"
+                                            style="height: 6rem; width: 6rem; background-image : url('fab_muze.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                                        </md-button>
+                                        <p class="text-sm">Müzeler</p>
+                                    </div>
+                                    <div class="text-center mr-4 p-1">
+                                        <md-button class="md-fab"
+                                            style="height: 6rem; width: 6rem; background-image : url('fab_mutfak.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                                        </md-button>
+                                        <p class="text-sm">Mutfak eğitimi</p>
+                                    </div>
+                                </div>
+                            </div>
                 </div>
                 <md-content class = "w-full" md-scroll-y>
                         <greet></greet>
