sidenav filter mobile fixed

--- a/app/src/homepage/homepage.template.html
+++ b/app/src/homepage/homepage.template.html
@@ -12,7 +12,7 @@
 
                 </div>
                 <div class = "flex flex-row justify-between float-right">
-                    <md-button class = "md-button">DETAY</md-button>
+                    <a href = "#!/etkinlikler"><md-button class = "md-button">DETAY</md-button></a>
                     <md-button class = "md-icon-button h-1 w-1 self-center">
                             <i class = "material-icons">share</i>
                     </md-button>
