--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -140,7 +140,40 @@
       </md-list-item>
       
         <filter-segment></filter-segment>
-      
+        <div class="w-full p-1">
+            <div class="flex flex-row flex-wrap scrolling-touch justify-between">
+                <div class="text-center mr-4 p-1">
+                    <md-button class="md-fab"
+                        style="height: 5rem; width: 5rem; background-image : url('konser1920.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    </md-button>
+                    <p class="text-sm">Kaçmaz!</p>
+                </div>
+                <div class="text-center mr-4 p-1">
+                    <md-button class="md-fab"
+                        style="height: 5rem; width: 5rem; background-image : url('fab_tiyatro.png'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    </md-button>
+                    <p class="text-sm">Tiyatro</p>
+                </div>
+                <div class="text-center mr-4 p-1">
+                    <md-button class="md-fab"
+                        style="height: 5rem; width: 5rem; background-image : url('fab_cinema.png'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    </md-button>
+                    <p class="text-sm">Sinema</p>
+                </div>
+                <div class="text-center mr-4 p-1">
+                    <md-button class="md-fab"
+                        style="height: 5rem; width: 5rem; background-image : url('fab_muze.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    </md-button>
+                    <p class="text-sm">Müzeler</p>
+                </div>
+                <div class="text-center mr-4 p-1">
+                    <md-button class="md-fab"
+                        style="height: 5rem; width: 5rem; background-image : url('fab_mutfak.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    </md-button>
+                    <p class="text-sm">Mutfak eğitimi</p>
+                </div>
+            </div>
+        </div>
 
 
     </md-content>
