changed little images with icons

--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -143,34 +143,28 @@
         <div class="w-full p-1">
             <div class="flex flex-row flex-wrap scrolling-touch justify-between">
                 <div class="text-center mr-4 p-1">
-                    <md-button class="md-fab"
-                        style="height: 5rem; width: 5rem; background-image : url('konser1920.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    <md-button class="md-icon-button">
+                      <md-icon md-svg-icon = "jazz-saxophone.svg"></md-icon>
                     </md-button>
-                    <p class="text-sm">Kaçmaz!</p>
+                    <p class="text-sm">Konser</p>
                 </div>
                 <div class="text-center mr-4 p-1">
-                    <md-button class="md-fab"
-                        style="height: 5rem; width: 5rem; background-image : url('fab_tiyatro.png'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
-                    </md-button>
+                    <md-button class="md-icon-button">
+                        <md-icon md-svg-icon = "theater-masks.svg"></md-icon>
+                      </md-button>
                     <p class="text-sm">Tiyatro</p>
                 </div>
                 <div class="text-center mr-4 p-1">
-                    <md-button class="md-fab"
-                        style="height: 5rem; width: 5rem; background-image : url('fab_cinema.png'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
-                    </md-button>
+                    <md-button class="md-icon-button">
+                        <md-icon md-svg-icon = "film-roll.svg"></md-icon>
+                      </md-button>
                     <p class="text-sm">Sinema</p>
                 </div>
                 <div class="text-center mr-4 p-1">
-                    <md-button class="md-fab"
-                        style="height: 5rem; width: 5rem; background-image : url('fab_muze.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
-                    </md-button>
+                    <md-button class="md-icon-button">
+                        <md-icon md-svg-icon = "bank.svg"></md-icon>
+                      </md-button>
                     <p class="text-sm">Müzeler</p>
-                </div>
-                <div class="text-center mr-4 p-1">
-                    <md-button class="md-fab"
-                        style="height: 5rem; width: 5rem; background-image : url('fab_mutfak.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
-                    </md-button>
-                    <p class="text-sm">Mutfak eğitimi</p>
                 </div>
             </div>
         </div>
