yeni butonları mobil için de attım

--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -141,30 +141,38 @@
       
         <filter-segment></filter-segment>
         <div class="w-full p-1">
-            <div class="flex flex-row flex-wrap scrolling-touch justify-between">
-                <div class="text-center mr-4 p-1">
-                    <md-button class="md-icon-button">
-                      <md-icon md-svg-icon = "jazz-saxophone.svg"></md-icon>
+            <div class="flex flex-col flex-wrap scrolling-touch justify-between">
+                <div class="w-full text-center self-center mr-4 p-1">
+                    <md-button class="md-button flex flex-row justify-around"
+                        style="display: flex !important; width: 80% !important; margin: auto !important">
+                        <md-icon md-svg-icon="jazz-saxophone.svg" style="margin: 0px !important"></md-icon>
+                        <p class="self-center">Konserler</p>
                     </md-button>
-                    <p class="text-sm">Konser</p>
+
                 </div>
-                <div class="text-center mr-4 p-1">
-                    <md-button class="md-icon-button">
-                        <md-icon md-svg-icon = "theater-masks.svg"></md-icon>
-                      </md-button>
-                    <p class="text-sm">Tiyatro</p>
+                <div class="w-full text-center self-center mr-4 p-1">
+                    <md-button class="md-button flex flex-row justify-around"
+                        style="display: flex !important; width: 80% !important; margin: auto !important">
+                        <md-icon md-svg-icon="theater-masks.svg" style="margin: 0px !important"></md-icon>
+                        <p class="self-center">Tiyatrolar</p>
+                    </md-button>
+
                 </div>
-                <div class="text-center mr-4 p-1">
-                    <md-button class="md-icon-button">
-                        <md-icon md-svg-icon = "film-roll.svg"></md-icon>
-                      </md-button>
-                    <p class="text-sm">Sinema</p>
+                <div class="w-full text-center self-center mr-4 p-1">
+                    <md-button class="md-button flex flex-row justify-around"
+                        style="display: flex !important; width: 80% !important; margin: auto !important">
+                        <md-icon md-svg-icon="film-roll.svg" style="margin: 0px !important"></md-icon>
+                        <p class="self-center">Filmler</p>
+                    </md-button>
+
                 </div>
-                <div class="text-center mr-4 p-1">
-                    <md-button class="md-icon-button">
-                        <md-icon md-svg-icon = "bank.svg"></md-icon>
-                      </md-button>
-                    <p class="text-sm">Müzeler</p>
+                <div class="w-full text-center self-center mr-4 p-1">
+                    <md-button class="md-button flex flex-row justify-around"
+                        style="display: flex !important; width: 80% !important; margin: auto !important">
+                        <md-icon md-svg-icon="bank.svg" style="margin: 0px !important"></md-icon>
+                        <p class="self-center">Müzeler</p>
+                    </md-button>
+
                 </div>
             </div>
         </div>
