--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -22,7 +22,7 @@
         <div class = "h-full flex flex-row">
           <div class = "flex-grow">
               <md-input-container class = "w-full">
-                  <input ng-model="" ng-if="!$ctrl.isSmaller('768px')" />
+                  <input ng-model="$ctrl.hello" ng-if="!$ctrl.isSmaller('768px')" />
                 </md-input-container>
           </div>
             
