deleted sticky filter

--- a/app/src/container/container.template.html
+++ b/app/src/container/container.template.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <md-content class="w-full" md-scroll-y>
-            <div ng-view></div>
+            <div ng-view autoscroll = "false"></div>
         </md-content>
 
     </div>
