soldaki burgere margin, konum seç'i sildim

--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -3,8 +3,8 @@
   <div class="md-toolbar-tools" style="margin: auto">
     <!--hamburger ve site ismi-->
     <div class="flex flew-row">
-      <div ng-class="{'hidden': $ctrl.isSmaller('768px')}">
-        <md-button class="md-icon-button mr-5" ng-click="$ctrl.toggleSide()">
+      <div class = "mr-4" ng-class="{'hidden': $ctrl.isSmaller('768px')}">
+        <md-button class="md-icon-button" ng-click="$ctrl.toggleSide()">
           <md-icon md-svg-icon="icon_menu.svg" class="favorite-icon"></md-icon>
         </md-button>
       </div>
